--- a/MyWeatherApp/MyWeatherApp/Main.storyboard
+++ b/MyWeatherApp/MyWeatherApp/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,12 +17,24 @@
                     <view key="view" contentMode="scaleToFill" id="pnu-yT-msV">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vC7-yE-WMg" customClass="WeatherView" customModule="MyWeatherApp" customModuleProvider="target">
+                                <rect key="frame" x="-300" y="300" width="1200" height="0.0"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vC7-yE-WMg" firstAttribute="width" secondItem="pnu-yT-msV" secondAttribute="width" id="7KO-Am-Mej"/>
+                            <constraint firstItem="vC7-yE-WMg" firstAttribute="centerY" secondItem="pnu-yT-msV" secondAttribute="centerY" id="D9n-5b-PTU"/>
+                            <constraint firstItem="vC7-yE-WMg" firstAttribute="width" secondItem="pnu-yT-msV" secondAttribute="height" multiplier="2:1" id="VMc-2Y-OUg"/>
+                            <constraint firstItem="vC7-yE-WMg" firstAttribute="centerX" secondItem="pnu-yT-msV" secondAttribute="centerX" id="kMt-Jy-FvO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t1h-9T-CCG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="339" y="315"/>
+            <point key="canvasLocation" x="200" y="300"/>
         </scene>
     </scenes>
 </document>
