--- a/MyWeatherApp/MyWeatherApp/Main.storyboard
+++ b/MyWeatherApp/MyWeatherApp/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="l8o-ux-fbV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="l8o-ux-fbV">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,37 +16,46 @@
                         <viewControllerLayoutGuide type="bottom" id="xbr-G4-C0p"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="pnu-yT-msV">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" pagingEnabled="YES" showsVerticalScrollIndicator="NO" indicatorStyle="white" translatesAutoresizingMaskIntoConstraints="NO" id="5Yo-Vk-2du">
-                                <rect key="frame" x="-20" y="190" width="600" height="180"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7hC-0J-ukE">
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vC7-yE-WMg" customClass="WeatherView" customModule="MyWeatherApp" customModuleProvider="target">
-                                        <rect key="frame" x="-300" y="90" width="1200" height="0.0"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="2GR-v8-1g3" userLabel="contentView">
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTU-0D-knI" customClass="WeatherView" customModule="MyWeatherApp" customModuleProvider="target">
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V2p-6v-tcH" customClass="WeeklyWeatherView" customModule="MyWeatherApp" customModuleProvider="target">
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="vC7-yE-WMg" firstAttribute="top" secondItem="5Yo-Vk-2du" secondAttribute="top" id="8zA-3W-Uht"/>
-                                    <constraint firstItem="vC7-yE-WMg" firstAttribute="width" secondItem="5Yo-Vk-2du" secondAttribute="width" multiplier="1.1" id="PeY-K1-wwv"/>
-                                    <constraint firstItem="vC7-yE-WMg" firstAttribute="height" secondItem="5Yo-Vk-2du" secondAttribute="height" id="ZAk-LZ-lO1"/>
-                                    <constraint firstItem="vC7-yE-WMg" firstAttribute="top" secondItem="5Yo-Vk-2du" secondAttribute="top" id="a18-6v-Bvd"/>
-                                    <constraint firstAttribute="trailing" secondItem="vC7-yE-WMg" secondAttribute="trailing" id="d0P-e4-wHV"/>
-                                    <constraint firstAttribute="bottom" secondItem="vC7-yE-WMg" secondAttribute="bottom" id="hpo-Ah-Bh9"/>
-                                    <constraint firstAttribute="trailing" secondItem="vC7-yE-WMg" secondAttribute="trailing" id="vdS-EW-iii"/>
-                                    <constraint firstItem="vC7-yE-WMg" firstAttribute="leading" secondItem="5Yo-Vk-2du" secondAttribute="leading" id="wTb-y5-ZhA"/>
-                                    <constraint firstItem="vC7-yE-WMg" firstAttribute="top" secondItem="5Yo-Vk-2du" secondAttribute="top" id="xsj-Ax-F1t"/>
-                                    <constraint firstItem="vC7-yE-WMg" firstAttribute="leading" secondItem="5Yo-Vk-2du" secondAttribute="leading" id="zT2-1T-UJM"/>
+                                    <constraint firstAttribute="bottom" secondItem="2GR-v8-1g3" secondAttribute="bottom" id="1xg-UM-lDF"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="top" secondItem="7hC-0J-ukE" secondAttribute="top" id="2he-2u-PVl"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="top" secondItem="7hC-0J-ukE" secondAttribute="top" id="AQH-4s-kVm"/>
+                                    <constraint firstAttribute="trailing" secondItem="2GR-v8-1g3" secondAttribute="trailing" id="ArS-vj-c7r"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="leading" secondItem="7hC-0J-ukE" secondAttribute="leading" id="C07-QA-rbx"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="width" secondItem="7hC-0J-ukE" secondAttribute="width" multiplier="2" id="E0e-xv-WdP"/>
+                                    <constraint firstAttribute="trailing" secondItem="2GR-v8-1g3" secondAttribute="trailing" id="Ggu-ip-a2X"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="height" secondItem="7hC-0J-ukE" secondAttribute="height" id="InV-wz-bXi"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="leading" secondItem="7hC-0J-ukE" secondAttribute="leading" id="KDF-Nf-7zf"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="top" secondItem="7hC-0J-ukE" secondAttribute="top" id="LiS-Kh-p3v"/>
+                                    <constraint firstItem="2GR-v8-1g3" firstAttribute="leading" secondItem="7hC-0J-ukE" secondAttribute="leading" id="N0R-Nb-zBU"/>
+                                    <constraint firstAttribute="bottom" secondItem="2GR-v8-1g3" secondAttribute="bottom" id="w81-fI-Dnn"/>
+                                    <constraint firstAttribute="bottom" secondItem="2GR-v8-1g3" secondAttribute="bottom" id="wAI-Vs-des"/>
+                                    <constraint firstAttribute="trailing" secondItem="2GR-v8-1g3" secondAttribute="trailing" id="wOh-St-flr"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.41165223717689514" green="0.79254454374313354" blue="0.20630925893783569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.35331010818481445" green="0.76627159118652344" blue="0.15810388326644897" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="5Yo-Vk-2du" firstAttribute="width" secondItem="pnu-yT-msV" secondAttribute="width" id="DmC-Ie-NGW"/>
-                            <constraint firstItem="5Yo-Vk-2du" firstAttribute="centerX" secondItem="pnu-yT-msV" secondAttribute="centerX" id="a7r-2f-Dtx"/>
-                            <constraint firstItem="5Yo-Vk-2du" firstAttribute="height" secondItem="pnu-yT-msV" secondAttribute="height" multiplier="0.3" id="aGs-va-fnR"/>
-                            <constraint firstItem="5Yo-Vk-2du" firstAttribute="centerY" secondItem="pnu-yT-msV" secondAttribute="centerY" multiplier="0.8" id="rSu-IB-FSa"/>
+                            <constraint firstItem="7hC-0J-ukE" firstAttribute="width" secondItem="pnu-yT-msV" secondAttribute="width" id="UCI-8p-iRD"/>
+                            <constraint firstItem="7hC-0J-ukE" firstAttribute="height" secondItem="pnu-yT-msV" secondAttribute="height" multiplier="0.3" id="aci-SY-YJy"/>
+                            <constraint firstItem="7hC-0J-ukE" firstAttribute="centerY" secondItem="pnu-yT-msV" secondAttribute="centerY" id="dwQ-G5-yf0"/>
+                            <constraint firstItem="7hC-0J-ukE" firstAttribute="centerX" secondItem="pnu-yT-msV" secondAttribute="centerX" id="fAE-IN-8Aw"/>
                         </constraints>
                     </view>
                 </viewController>
