--- a/MyWeatherApp/WeeklyWeatherView.xib
+++ b/MyWeatherApp/WeeklyWeatherView.xib
@@ -18,7 +18,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="WeeklyWeatherView" customModule="MyWeatherApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -50,6 +50,7 @@
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <accessibility key="accessibilityConfiguration" identifier="weeklyWeatherViewCell"/>
             <constraints>
                 <constraint firstItem="1om-o6-C6X" firstAttribute="height" secondItem="dZZ-bx-jbs" secondAttribute="height" id="1L1-cA-hAM"/>
                 <constraint firstItem="dZZ-bx-jbs" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.6" id="8lt-1a-mIV"/>
