--- a/MyWeatherApp/MyWeatherApp/WeatherView.xib
+++ b/MyWeatherApp/MyWeatherApp/WeatherView.xib
@@ -49,20 +49,20 @@
                 <constraint firstItem="fcs-zR-JgX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="0.25" id="0Mg-f0-lyC"/>
                 <constraint firstItem="qTm-wY-2J2" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" multiplier="0.5" id="2w6-jD-DRN"/>
                 <constraint firstItem="hFz-ow-2Sg" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="3uC-46-qUg"/>
+                <constraint firstItem="xCS-Md-eki" firstAttribute="height" secondItem="hFz-ow-2Sg" secondAttribute="height" id="7ZN-Yy-OfT"/>
                 <constraint firstItem="fcs-zR-JgX" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.1" id="9OK-iA-PVv"/>
                 <constraint firstItem="qTm-wY-2J2" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.8" id="Am1-0h-2Zd"/>
-                <constraint firstItem="hFz-ow-2Sg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="COT-6I-XvK"/>
+                <constraint firstItem="hFz-ow-2Sg" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" multiplier="0.5" id="COT-6I-XvK"/>
                 <constraint firstItem="ruB-FY-UzV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" multiplier="1.5" id="Ep5-lB-lnu"/>
-                <constraint firstItem="hFz-ow-2Sg" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.4" id="EuL-Y3-yta"/>
-                <constraint firstItem="xCS-Md-eki" firstAttribute="height" secondItem="hFz-ow-2Sg" secondAttribute="height" id="G2r-t5-81c"/>
-                <constraint firstItem="hFz-ow-2Sg" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.6" id="H3T-LQ-UUn"/>
+                <constraint firstItem="hFz-ow-2Sg" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.3" id="EuL-Y3-yta"/>
+                <constraint firstItem="hFz-ow-2Sg" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.5" id="H3T-LQ-UUn"/>
+                <constraint firstItem="xCS-Md-eki" firstAttribute="width" secondItem="hFz-ow-2Sg" secondAttribute="width" id="LDZ-A4-4fZ"/>
+                <constraint firstItem="xCS-Md-eki" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="NHI-Bx-qRR"/>
                 <constraint firstItem="fcs-zR-JgX" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="PTg-bj-68Q"/>
                 <constraint firstItem="qTm-wY-2J2" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.1" id="QBF-cO-Uah"/>
-                <constraint firstItem="xCS-Md-eki" firstAttribute="width" secondItem="hFz-ow-2Sg" secondAttribute="width" id="bf2-h2-pv3"/>
-                <constraint firstItem="xCS-Md-eki" firstAttribute="centerX" secondItem="hFz-ow-2Sg" secondAttribute="centerX" id="cRJ-gv-pvS"/>
                 <constraint firstItem="ruB-FY-UzV" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="mnF-3e-ToC"/>
-                <constraint firstItem="xCS-Md-eki" firstAttribute="centerY" secondItem="hFz-ow-2Sg" secondAttribute="centerY" id="nEY-yM-N54"/>
                 <constraint firstItem="fcs-zR-JgX" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="no2-iT-bjh"/>
+                <constraint firstItem="xCS-Md-eki" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" multiplier="1.5" id="slD-rl-LIz"/>
                 <constraint firstItem="ruB-FY-UzV" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.1" id="ugR-DM-TG1"/>
                 <constraint firstItem="qTm-wY-2J2" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.25" id="vaG-UH-V4k"/>
                 <constraint firstItem="ruB-FY-UzV" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.8" id="w0o-Vx-f5d"/>
